src/styles/globals.css
/* ... */
/**
 * Constrain images and videos to the parent width and preserve
 * their intrinsic aspect ratio.
 *
 * https://github.com/mozdevs/cssremedy/issues/14
 */

img,
video {
  max-width: 100%;
  height: auto;
}

/**
 * Ensure the default browser behavior of the `hidden` attribute.
 */

[hidden] {
  display: none;
}

*, ::before, ::after {
	--tw-translate-x: 0;
	--tw-translate-y: 0;
	--tw-rotate: 0;
	--tw-skew-x: 0;
	--tw-skew-y: 0;
	--tw-scale-x: 1;
	--tw-scale-y: 1;
	--tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
	--tw-border-opacity: 1;
	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
	--tw-ring-offset-shadow: 0 0 #0000;
	--tw-ring-shadow: 0 0 #0000;
	--tw-shadow: 0 0 #0000;
	--tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
	--tw-ring-offset-width: 0px;
	--tw-ring-offset-color: #fff;
	--tw-ring-color: rgba(59, 130, 246, 0.5);
	--tw-ring-offset-shadow: 0 0 #0000;
	--tw-ring-shadow: 0 0 #0000;
	--tw-shadow: 0 0 #0000;
}
.container {
	width: 100%;
	margin-right: auto;
	margin-left: auto;
	padding-right: 8rem;
	padding-left: 8rem;
}
@media (min-width: 2824px) {

	.container {
		max-width: 2824px;
	}
}
.sr-only {
	position: absolute;
	width: 1px;
	height: 1px;
	padding: 0;
	margin: -1px;
	overflow: hidden;
	clip: rect(0, 0, 0, 0);
	white-space: nowrap;
	border-width: 0;
}
.pointer-events-none {
	pointer-events: none;
}
.fixed {
	position: fixed;
}
.absolute {
	position: absolute;
}
.relative {
	position: relative;
}
.inset-0 {
	top: 0px;
	right: 0px;
	bottom: 0px;
	left: 0px;
}
.top-0 {
	top: 0px;
}
.right-0 {
	right: 0px;
}
.left-1\/2 {
	left: 50%;
}
.left-4 {
	left: 1rem;
}
.z-50 {
	z-index: 50;
}
.z-10 {
	z-index: 10;
}
.z-0 {
	z-index: 0;
}
.-z-20 {
	z-index: -20;
}
.-z-10 {
	z-index: -10;
}
.-z-30 {
	z-index: -30;
}
.z-40 {
	z-index: 40;
}
.z-30 {
	z-index: 30;
}
.m-1 {
	margin: 0.25rem;
}
.m-8 {
	margin: 2rem;
}
.my-6 {
	margin-top: 1.5rem;
	margin-bottom: 1.5rem;
}
.my-3 {
	margin-top: 0.75rem;
	margin-bottom: 0.75rem;
}
.my-4 {
	margin-top: 1rem;
	margin-bottom: 1rem;
}
.mx-20 {
	margin-left: 5rem;
	margin-right: 5rem;
}
.mx-2 {
	margin-left: 0.5rem;
	margin-right: 0.5rem;
}
.my-2 {
	margin-top: 0.5rem;
	margin-bottom: 0.5rem;
}
.my-1 {
	margin-top: 0.25rem;
	margin-bottom: 0.25rem;
}
.mx-3 {
	margin-left: 0.75rem;
	margin-right: 0.75rem;
}
.mx-4 {
	margin-left: 1rem;
	margin-right: 1rem;
}
.mx-auto {
	margin-left: auto;
	margin-right: auto;
}
.my-8 {
	margin-top: 2rem;
	margin-bottom: 2rem;
}
.mx-6 {
	margin-left: 1.5rem;
	margin-right: 1.5rem;
}
.my-10 {
	margin-top: 2.5rem;
	margin-bottom: 2.5rem;
}
.mb-6 {
	margin-bottom: 1.5rem;
}
.mt-24 {
	margin-top: 6rem;
}
.mt-6 {
	margin-top: 1.5rem;
}
.mt-10 {
	margin-top: 2.5rem;
}
.-ml-10 {
	margin-left: -2.5rem;
}
.ml-2 {
	margin-left: 0.5rem;
}
.ml-1 {
	margin-left: 0.25rem;
}
.mt-4 {
	margin-top: 1rem;
}
.mt-2 {
	margin-top: 0.5rem;
}
.mt-3 {
	margin-top: 0.75rem;
}
.mb-8 {
	margin-bottom: 2rem;
}
.mb-2 {
	margin-bottom: 0.5rem;
}
.mb-10 {
	margin-bottom: 2.5rem;
}
.ml-8 {
	margin-left: 2rem;
}
.ml-4 {
	margin-left: 1rem;
}
.mr-10 {
	margin-right: 2.5rem;
}
.mb-4 {
	margin-bottom: 1rem;
}
.mb-1 {
	margin-bottom: 0.25rem;
}
.mt-80 {
	margin-top: 20rem;
}
.ml-48 {
	margin-left: 12rem;
}
.mt-40 {
	margin-top: 10rem;
}
.ml-3 {
	margin-left: 0.75rem;
}
.mt-1 {
	margin-top: 0.25rem;
}
.ml-16 {
	margin-left: 4rem;
}
.mr-20 {
	margin-right: 5rem;
}
.mt-48 {
	margin-top: 12rem;
}
.mt-14 {
	margin-top: 3.5rem;
}
.ml-60 {
	margin-left: 15rem;
}
.mt-8 {
	margin-top: 2rem;
}
.ml-32 {
	margin-left: 8rem;
}
.block {
	display: block;
}
.inline-block {
	display: inline-block;
}
.flex {
	display: flex;
}
.inline-flex {
	display: inline-flex;
}
.grid {
	display: grid;
}
.contents {
	display: contents;
}
.hidden {
	display: none;
}
.h-screen {
	height: 100vh;
}
.h-16 {
	height: 4rem;
}
.h-4 {
	height: 1rem;
}
.h-px {
	height: 1px;
}
.h-5 {
	height: 1.25rem;
}
.h-8 {
	height: 2rem;
}
.h-6 {
	height: 1.5rem;
}
.h-full {
	height: 100%;
}
.h-60 {
	height: 15rem;
}
.h-\[1000px\] {
	height: 1000px;
}
.h-12 {
	height: 3rem;
}
.min-h-screen {
	min-height: 100vh;
}
.w-screen {
	width: 100vw;
}
.w-16 {
	width: 4rem;
}
.w-10 {
	width: 2.5rem;
}
.w-4 {
	width: 1rem;
}
.w-full {
	width: 100%;
}
.w-14 {
	width: 3.5rem;
}
.w-5 {
	width: 1.25rem;
}
.w-8 {
	width: 2rem;
}
.w-20 {
	width: 5rem;
}
.w-6 {
	width: 1.5rem;
}
.w-12 {
	width: 3rem;
}
.w-11 {
	width: 2.75rem;
}
.w-\[100\%\] {
	width: 100%;
}
.w-56 {
	width: 14rem;
}
.w-\[300px\] {
	width: 300px;
}
.w-\[690px\] {
	width: 690px;
}
.w-\[280px\] {
	width: 280px;
}
.max-w-7xl {
	max-width: 80rem;
}
.max-w-2xl {
	max-width: 42rem;
}
.max-w-xs {
	max-width: 20rem;
}
.flex-shrink {
	flex-shrink: 1;
}
.flex-grow {
	flex-grow: 1;
}
.-translate-x-1\/2 {
	--tw-translate-x: -50%;
	transform: var(--tw-transform);
}
.translate-x-6 {
	--tw-translate-x: 1.5rem;
	transform: var(--tw-transform);
}
.translate-x-1 {
	--tw-translate-x: 0.25rem;
	transform: var(--tw-transform);
}
.translate-y-4 {
	--tw-translate-y: 1rem;
	transform: var(--tw-transform);
}
.translate-y-0 {
	--tw-translate-y: 0px;
	transform: var(--tw-transform);
}
.transform {
	transform: var(--tw-transform);
}
@-webkit-keyframes spin {

	to {
		transform: rotate(360deg);
	}
}
@keyframes spin {

	to {
		transform: rotate(360deg);
	}
}
.animate-spin {
	-webkit-animation: spin 1s linear infinite;
	        animation: spin 1s linear infinite;
}
.cursor-pointer {
	cursor: pointer;
}
.flex-col {
	flex-direction: column;
}
.flex-wrap {
	flex-wrap: wrap;
}
.place-items-center {
	place-items: center;
}
.items-start {
	align-items: flex-start;
}
.items-end {
	align-items: flex-end;
}
.items-center {
	align-items: center;
}
.justify-start {
	justify-content: flex-start;
}
.justify-end {
	justify-content: flex-end;
}
.justify-center {
	justify-content: center;
}
/* ... */

